--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,38 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
+@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@300;600;800&display=swap');
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+:root {
+    --dark-blue-dark: hsl(209, 23%, 22%);
+    --very-dark-blue-dark: hsl(207, 26%, 17%);
+    --very-dark-blue-light: hsl(200, 15%, 8%);
+    --dark-grey-light: hsl(0, 0%, 52%);
+    --very-light-grey-light: hsl(0, 0%, 98%);
+    --white: hsl(0, 0%, 100%);
+
+    /*    Font Size*/
+    --homepage-items: 14px;
+    --detail-page: 16px;
+
+    /*    fonts*/
+    --family: 'Nunito Sans', sans-serif;
+    --weight-300: 300;
+    --weight-600: 600;
+    --weight-800: 800;
+}
+* {
+    font-family: var(--family);
+}
+.bg-dark-blue-dark {
+    background-color: var(--dark-blue-dark);
+}
+.bg-very-dark-blue-dark {
+    background-color: var(--very-dark-blue-dark);
+}
+.text-very-light-grey-light {
+    color: var(--very-light-grey-light);
+}
+.bg-dark-grey-light {
+    background-color: var(--dark-grey-light);
+}
+.bg-very-light-grey-light {
+    background-color: var(--very-light-grey-light);
 }
